--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,6 +7,16 @@
     <title>Maze Generator</title>
 </head>
 <body>
+    <form action="none">
+        <select id="maze-type">
+            <option value="Rectangle">Rectangle</option>
+            <option value="Circle">Circle</option>
+        </select>
+        <div id="rect-options">
+            <div class="input-container"><label for="x-size">x size</label><input type="number" name="x-size" id="x-size"></div>
+            <div class="input-container"><label for="y-size">y size</label><input type="number" name="" id="y-size"></div>
+        </div>
+    </form>
     <script src="js/main.js"></script>
 </body>
 </html>
