add styling to html

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Maze Generator</title>
 </head>
+
 <body>
-    <form action="none">
-        <select id="maze-type">
-            <option value="Rectangle">Rectangle</option>
-            <option value="Circle">Circle</option>
-        </select>
-        <div id="rect-options">
-            <div class="input-container"><label for="x-size">x size</label><input type="number" name="x-size" id="x-size"></div>
-            <div class="input-container"><label for="y-size">y size</label><input type="number" name="" id="y-size"></div>
+    <div class="app">
+        <form action="none">
+            <div class="maze-selector">
+                <label class="select" for="maze-type">
+                    <select id="maze-type" required="required">
+                        <option value="Rectangle">Rectangle</option>
+                        <option value="Circle">Circle</option>
+                    </select>
+                    <svg>
+                        <use xlink:href="#select-arrow-down"></use>
+                    </svg>
+                </label>
+            </div>
+            <div class="options" id="rect-options">
+                <div class="input-container"><label for="x-size">Width</label><input class="cord-input" placeholder="0"
+                        type="number" name="" id="x-size"></div>
+                <div class="input-container"><label for="y-size">Height</label><input class="cord-input" placeholder="0"
+                        type="number" name="" id="y-size">
+                </div>
+            </div>
+            <!-- <div class="options" id="circle-options">
+                <div class="input-container"><label for="radius-size">Radius</label><input class="cord-input" placeholder="0" type="number"
+                        name="" id="radius-size"></div>
+                <div class="input-container"><label for="y-size">Någonting!</label><input class="cord-input" placeholder="0" type="number"
+                        name="" id="y-size">
+                </div>
+            </div> -->
+        </form>
+
+        <div class="maze">
+            <!-- SVG goes here -->
         </div>
-    </form>
-    <script src="js/main.js"></script>
+    </div>
+
+    <svg class="sprites">
+        <symbol id="select-arrow-down" viewbox="0 0 10 6">
+            <polyline points="1 1 5 5 9 1"></polyline>
+        </symbol>
+    </svg>
+
+    <!-- <script src="js/main.js"></script> -->
 </body>
+
 </html>
